@@ -34,6 +34,13 @@
  */
 class tx_seminars_BackEndExtJs_Module extends t3lib_SCbase {
 	/**
+	 * path to the cached language labels
+	 *
+	 * @var string
+	 */
+	const LANGUAGE_LABELS_CACHE_PATH = 'typo3temp/tx_seminars/BackEndExtJs/';
+
+	/**
 	 * locallang files to add as inline language labels
 	 *
 	 * @var array
@@ -68,6 +75,7 @@ class tx_seminars_BackEndExtJs_Module extends t3lib_SCbase {
 	 * @return string the HTML code generated by this module
 	 */
 	public function main() {
+		$this->getPageRenderer()->setCharSet('utf-8');
 		$this->getPageRenderer()->addCssFile(
 			t3lib_extMgm::extRelPath('seminars') . 'Resources/Public/CSS/BackEndExtJs/BackEnd.css',
 			'stylesheet',
@@ -133,34 +141,67 @@ class tx_seminars_BackEndExtJs_Module extends t3lib_SCbase {
 			FALSE
 		);
 		$this->getPageRenderer()->loadExtJS();
-		$this->addInlineLanguageLabels();
+		$this->addLanguageLabelsFile();
 		$this->addInlineSettings();
 
 		return $this->outputContent();
 	}
 
 	/**
-	 * Reads all language labels from every file listed in $this->locallangFiles
-	 * and adds them as inline language labels to the page renderer which
-	 * outputs them as JSON in the page header.
+	 * Adds the language labels file to the page renderer. Creates the language
+	 * labels file in typo3temp/tx_seminars_BackEndExtJs/ if it doesn't exist
+	 * already.
 	 */
-	private function addInlineLanguageLabels() {
+	private function addLanguageLabelsFile() {
 		$language = $GLOBALS['LANG']->lang;
-		$charset = $GLOBALS['LANG']->charSet;
+
+		$languageCacheFile = self::LANGUAGE_LABELS_CACHE_PATH .
+			'seminars_' . $language . '.js';
+		$languageCacheFileAbsolute = PATH_site . $languageCacheFile;
+
+		if (!file_exists($languageCacheFileAbsolute)) {
+			$content = 'Ext.ns("TYPO3");';
+			$content .= 'TYPO3.lang = ' .
+				json_encode($this->getLanguageLabels($language)) . ';';
+			t3lib_div::writeFileToTypo3tempDir(
+				$languageCacheFileAbsolute, $content
+			);
+		}
+
+		$this->getPageRenderer()->addJsFile(
+			t3lib_div::getIndpEnv('TYPO3_SITE_PATH') . $languageCacheFile,
+			'text/javascript',
+			FALSE,
+			TRUE
+		);
+	}
+
+	/**
+	 * Reads all language labels from every file listed in $this->locallangFiles
+	 * and returns them as in array.
+	 *
+	 * @param string $language the key of the language to return the labels for
+	 *
+	 * @return array all language labels from the files listed in
+	 *               $this->locallangFiles
+	 */
+	private function getLanguageLabels($language) {
+		$result = array();
 
 		foreach (self::$locallangFiles as $file) {
 			$labelsInAllLanguages
-				= t3lib_div::readLLfile($file, $language, $charset);
+				= t3lib_div::readLLfile($file, $language, 'utf-8');
 			$labelsToUse = $labelsInAllLanguages['default'];
 			if ($language !== 'default') {
 				foreach ($labelsInAllLanguages[$language] as $key => $value) {
 					$labelsToUse[$key] = $value;
 				}
 			}
-			$this->getPageRenderer()->addInlineLanguageLabelArray(
-				$labelsToUse
-			);
+
+			$result = array_merge($result, $labelsToUse);
 		}
+
+		return $result;
 	}
 
 	/**
