@@ -76,4 +76,8 @@ $TYPO3_CONF_VARS['BE']['AJAX']['Seminars::getState'] = t3lib_extmgm::extPath($_E
 	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
 $TYPO3_CONF_VARS['BE']['AJAX']['Seminars::setState'] = t3lib_extmgm::extPath($_EXTKEY) .
 	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
+
+$TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['clearCachePostProc'][]
+	= t3lib_extmgm::extPath($_EXTKEY) .
+		'BackEndExtJs/ClearCache.php:tx_seminars_BackEndExtJs_ClearCache->clearCachePostProcess';
 ?>
