@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#4115] Change: Cache the locallang labels in a JavaScript file
 - [#3917] Change: Use the PID from the BE user groups when creating new records
 - [#3892] Fix: Table headings for registrations, speakers and organizers are incorrect
 - [#4094] Fix: Use empty configurations in the unit tests
